# lexical-emerson

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: STATUS.md  plan.md  tasks.md
docs/ADRs/: 0001-tauri-v2-over-electron.md  0002-solid-over-react.md  0003-rusqlite-over-json.md  0004-separate-windows-over-tabs.md  0005-terminal-tabs-within-project-window.md  0006-window-project-identity.md  0007-bucket-model.md  0008-release-process.md  0009-quill-for-notes.md  0010-bucket-workspace-and-acl-gotcha.md  0011-pointer-event-dnd-for-css-3d-views.md  0012-cylindric-3d-workspace-geometry.md  0013-codemirror-editor-split-pane.md
docs/handoff/: 2026-05-15.md  2026-05-16-workspace-bugs.md  2026-05-16.md  2026-05-17.md  2026-05-18.md
src/: App.tsx  index.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  projects.rs  pty.rs  session_restore.rs  store.rs
src/components/: BucketBar.tsx  BucketWorkspace.tsx  BucketWorkspaceDebugLog.tsx  BucketsList.tsx  EditorPane.tsx  FileTree.tsx  NotesModal.tsx  ProjectColorPicker.tsx  ProjectNotesPanel.tsx  QuickSwitcher.tsx  RecentProjects.tsx  TerminalPane.tsx  TerminalsView.tsx  TimerModal.tsx  TimerRail.tsx  TranscriptModal.tsx
src/lib/: arm-focus.ts  editor-state.ts  fuzzy.ts  ipc.ts  markdown-mini.ts  notes-quill.ts  palette.ts  shift-arm.ts  timer-effects.ts  timer-store.ts  types.ts
src/styles/: app.css  bucket-workspace.css  (+5 more)
