[package]
name = "lexical-emerson"
version = "0.1.0"
description = "Lightweight macOS folder + terminal launcher for Claude Code users."
authors = ["Mahmut Salman"]
license = "MIT"
edition = "2021"
rust-version = "1.80"
default-run = "lexical-emerson"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

portable-pty = "0.9"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "io-util", "time"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.32", features = ["bundled"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
